data binding added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Test">
         <activity
+            android:name=".DataBindingActivity"
+            android:exported="false" />
+        <activity
             android:name=".bottomSheet.ItemActivity"
             android:exported="false" />
         <activity android:name=".RecyclerViewActivity" />
